name:                agda-language-server
version:             0.0.1.0
-- synopsis:
-- description:
homepage:            https://github.com/banacorn/agda-language-server#readme
license:             BSD3
license-file:        LICENSE
author:              Luā Tîng-Gān
maintainer:          banacorn@gmail.com
copyright:           (c) 2017-2017 Luā Tîng-Gān
category:            program
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable agda-language-server
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
    , cmdargs
    , process
    , hslogger
    -- , aeson
    -- , bytestring
    -- , containers
    -- , directory
    -- , data-default
    -- , filepath
    -- , lens >= 4.15.2
    -- , mtl
    -- , stm
    -- , text
    -- , time
    -- , transformers
    -- , unordered-containers
    -- , vector
    -- , yi-rope
  other-modules:
    -- Language.Agda.LSP.Core
                      Language.Agda.LSP.Util
  default-language:    Haskell2010

test-suite agda-language-server-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/banacorn/agda-language-server
